--- a/sass/main.scss
+++ b/sass/main.scss
@@ -147,6 +147,7 @@ $instagram: #396d9a !default;
 .brand-graylight-bg {
   background-color: $brand-graylight;
 }
+
 // fonts
 .font-primary {
   font-family: $font-family-sans-serif;
@@ -172,6 +173,7 @@ $instagram: #396d9a !default;
 .font-gotham-bold {
   font-family: $font-gotham-bold;
 }
+
 //button
 .btn {
   @include transition(all 300ms ease);
@@ -284,6 +286,7 @@ textarea {
 .no-border {
   border: none;
 }
+
 // Class
 .relate {
   position: relative;
@@ -361,10 +364,10 @@ button {
 }
 .banner {
   .get-center {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  @include transform(translate(-50%,-40%));
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    @include transform(translate(-50%,-40%));
   }
 }
 /* Start writing sass here */
@@ -604,7 +607,7 @@ button {
       }
       &:before {
         content: "";
-        background:  url(../img/left.png) no-repeat;
+        background: url(../img/left.png) no-repeat;
         width: 59px;
         height: 49px;
         position: absolute;
@@ -688,7 +691,8 @@ button {
     textarea {
       min-height: 225px;
     }
-    input,textarea {
+    input,
+    textarea {
       @include placeholder {
         font-family: $font-baubodi;
         font-weight: bold;
@@ -714,6 +718,7 @@ button {
     }
   }
 }
+
 ///end home///
 /////////////////////
 ////Health-Management
@@ -785,8 +790,11 @@ button {
 }
 .weight-round {
   @include square(100px);
-  p { margin: 0; }
+  p {
+    margin: 0;
+  }
 }
+
 // .health-tab {
 //   .tab-chart { width: 83%; }
 // }
@@ -965,7 +973,7 @@ button {
   }
 }
 .slider-round {
-  padding:  0 70px 0 30px;
+  padding: 0 70px 0 30px;
   margin-bottom: 50px;
   .carousel-control.left {
     top: -50px;
@@ -1004,6 +1012,7 @@ button {
     }
   }
 }
+
 //end Health-management////
 /////meet////
 .suman-video {
@@ -1040,6 +1049,7 @@ button {
   margin-top: 60px;
   margin-bottom: 100px;
 }
+
 ////end meet///
 //////faq/////
 .faq {
@@ -1081,6 +1091,7 @@ button {
     @include transform(translateY(-50%));
   }
 }
+
 ///end faq////
 ///cart//////
 .cart-main {
@@ -1147,6 +1158,7 @@ button {
     }
   }
 }
+
 //end cart///
 ////Login//////
 .login-tab {
@@ -1202,6 +1214,7 @@ button {
     }
   }
 }
+
 ////end login//
 ///checkout/////
 .checkout-tab {
@@ -1297,6 +1310,7 @@ button {
     margin: 0 0 0 5px;
   }
 }
+
 ///end checkout//
 ///////////////
 //Footer///////
@@ -1384,11 +1398,11 @@ footer {
   }
   .package {
     background: url(../img/foot-healthpack.jpg) no-repeat;
-    background-size: 100% 100%;
+    background-size: cover;
   }
   .shop {
     background: url(../img/health-shop.jpg) no-repeat;
-    background-size: 100% 100%;
+    background-size: cover;
   }
   .foot-btn {
     min-width: 250px;
@@ -1457,6 +1471,7 @@ footer {
     @include transition(background-color 0.4s linear);
   }
 }
+
 // product-page filters
 .filters {
   input[type="checkbox"] +label {
@@ -1472,6 +1487,7 @@ footer {
     background-color: $brand-brown-dark;
   }
 }
+
 /// end of filters///
 //////end footer/////
 @import "harsh";
