--- a/views/content/productdetail.html
+++ b/views/content/productdetail.html
@@ -4,7 +4,7 @@
   </div>
 
   <div class="container">
-    <div class="product-detail get-up brand-brown-bg rel">
+    <div class="product-detail">
       <div class="row">
         <div class="col-md-5">
           <div class="product-image">
@@ -13,7 +13,33 @@
         </div>
 
         <div class="col-md-7">
-          <h3 class="text-uppercase font-semibold">Baked Potato Chips</h3>
+          <div class="row">
+            <div class="col-md-8">
+              <h3 class="text-uppercase font-semibold inline-block">Baked Potato Chips</h3>
+              <span class="text-center font-semibold brand-primary inline-block prd-price"><i class="fa fa-inr"></i> 225</span>
+              <div class="prd-descp">
+                <div class="product-price">
+                  <p class="brand-primary font-semibold">Net Weight: 100 gms</p>
+                </div>
+                <form action="">
+                  <div class="form-group relate">
+                    <label for="quan">Quantity:</label>
+                    <select class="form-control" id="quan">
+                      <option>01</option>
+                      <option>02</option>
+                      <option>03</option>
+                      <option>04</option>
+                    </select>
+                    <span><i class="fa fa-caret-down"></i></span>
+                  </div>
+                </form>
+              </div>
+              <div class="product-buttons">
+                <a href="" class="btn btn-primary text-uppercase">Add to cart</a>
+                <a href="" class="btn btn-primary text-uppercase">Continue Shopping</a>
+              </div>
+            </div>
+          </div>
           <tabset>
             <tab>
               <tab-heading>
@@ -25,33 +51,6 @@
                 <span class="white"><sup>*</sup>Gluten Free</span>
                 <br>
                 <span class="white"><sup>*</sup>Low Fat</span>
-              </div>
-
-              <div class="row">
-                <div class="col-md-4">
-                  <div class="product-price">
-                    <p class="brand-primary font-semibold">Net Weight: 100 gms</p>
-                    <p class="text-center font-semibold"><i class="fa fa-inr"></i> 225</p>
-                  </div>
-                </div>
-
-                <div class="col-md-8">
-                  <div class="form-group relate">
-                    <label for="quan">Quantity:</label>
-                    <select class="form-control" id="quan">
-                      <option>01</option>
-                      <option>02</option>
-                      <option>03</option>
-                      <option>04</option>
-                    </select>
-                    <span><i class="fa fa-caret-down"></i></span>
-                  </div>
-
-                  <div class="product-buttons">
-                    <a href="" class="btn btn-primary text-uppercase">Add to cart</a>
-                    <a href="" class="btn btn-primary text-uppercase">Continue Shopping</a>
-                  </div>
-                </div>
               </div>
             </tab>
             <tab>
